First version of gallery

--- a/practice-pizza/HashCode_Pizza/HashCode_Pizza.csproj
+++ b/practice-pizza/HashCode_Pizza/HashCode_Pizza.csproj
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PizzaPlate.cs" />
-    <Compile Include="PizzaSlice.cs" />
+    <Compile Include="Catalog.cs" />
+    <Compile Include="Photo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
