--- a/practice-pizza/HashCode_Pizza/HashCode_Pizza.csproj
+++ b/practice-pizza/HashCode_Pizza/HashCode_Pizza.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Algorithm.cs" />
+    <Compile Include="InterestCalculator.cs" />
     <Compile Include="Catalog.cs" />
     <Compile Include="Photo.cs" />
     <Compile Include="Program.cs" />
